src/objects/Agent_Chat_Setup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Agent Chat set up configuration management.</description>
    <fields>
        <fullName>Client_Id__c</fullName>
        <description>Connected app client id.</description>
        <inlineHelpText>Connected app client id.</inlineHelpText>
        <label>Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>Connected app client secret.</description>
        <inlineHelpText>Connected app client secret.</inlineHelpText>
        <label>Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notify Salesforce agent about new chat request by email.</description>
        <inlineHelpText>Notify Salesforce agent about new chat request by email.</inlineHelpText>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Password__c</fullName>
        <description>Password for Salesforce account.</description>
        <inlineHelpText>Password for Salesforce account.</inlineHelpText>
        <label>Salesforce Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Username__c</fullName>
        <description>Username for Salesforce account.</description>
        <inlineHelpText>Username for Salesforce account.</inlineHelpText>
        <label>Salesforce Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitute_Agent__c</fullName>
        <description>Substitute agent when an agent relevant to a skill is not available for chat.</description>
        <inlineHelpText>Substitute agent when an agent relevant to a skill is not available for chat.</inlineHelpText>
        <label>Subtitute Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Agent Chat Setup</label>
</CustomObject>